--- a/project.config.json
+++ b/project.config.json
@@ -79,6 +79,13 @@
 					"pathName": "pages/goods_detail/index",
 					"query": "goods_id=43984",
 					"scene": null
+				},
+				{
+					"id": 3,
+					"name": "购物车",
+					"pathName": "pages/cart/index",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
