--- a/project.config.json
+++ b/project.config.json
@@ -86,6 +86,13 @@
 					"pathName": "pages/cart/index",
 					"query": "",
 					"scene": null
+				},
+				{
+					"id": 4,
+					"name": "支付",
+					"pathName": "pages/pay/index",
+					"query": "",
+					"scene": null
 				}
 			]
 		}
